--- a/index.html
+++ b/index.html
@@ -205,12 +205,13 @@
                 <h3>Esercizio 13</h3>
             </div>
             <div class="col-xs-12">
-                <div class="well">
+                <div class="well special">
                     <a href="#" class="ex-13-button">
                         <div class="ex-13-top-white"></div>
                         Test
                         <div class="ex-13-bottom-white"></div>
                     </a>
+                    <div class="hint">Sposto il bottone sennò la barre grigie strabordano, ed è brutto.</div>
                 </div>
             </div>
             <div class="col-xs-12">
